fixed the subtitle and price tag on the blue box...however 2nd row is now out of alignment...sigh.

--- a/style/Index/priceCards.css
+++ b/style/Index/priceCards.css
@@ -70,7 +70,7 @@ p.blue {
 	color: #002774;
 }
 
-
+/* this works ok */
 .price-text-blue {
 	color: #cfe6fc !important;
 	text-shadow: 1px 1px 0px #002774;
@@ -82,7 +82,7 @@ p.blue {
 	padding: 0 5px;
 }
 
-
+/* this works ok */
 .price-title-blue {
 	color: #cfe6fc;
 	font-family: 'Cabin', sans-serif;
@@ -106,16 +106,16 @@ p.blue {
     text-shadow: 1px 1px 0px #1e92f6;
 } */
 
-.price-box-blue .price-subtitle,.price-box-blue .price-text {
-	/* color: #002774 !important;
+/* .price-box-blue .price-subtitle,.price-box-blue .price-text {
+	color: #002774 !important;
 	font-family: 'Cabin', sans-serif;
 	font-size: 14px;
 	line-height: 18px;
 	font-weight: 600;
-	margin: -3%; */
-}
+	margin: -3%;
+} */
 
-.price-box-blue ul.pricing-list-blue li.price-tag-blue a{
+/* .price-box-blue ul.pricing-list-blue li.price-tag-blue a{
 	color: #cfe6fc;
 	background: linear-gradient(to bottom right, #1e92f6, #020723);
 	border: 2px solid #002774;
@@ -126,14 +126,14 @@ p.blue {
 	line-height: 24px;
 	font-weight: 600;
 	margin: 40px 0 30px 0;
-}
+} */
 
-ul.pricing-list-blue li.price-tag-blue a:hover{
+/* ul.pricing-list-blue li.price-tag-blue a:hover{
 	background: #ee3e0e;
     background: linear-gradient(135deg,  #ee3e0e 0%, #020723 100%);
-}
+} */
 
-ul.pricing-list li.price-text-blue {
+/* ul.pricing-list li.price-text-blue {
 	color: #cfe6fc !important;		
 	text-shadow: 2px 1px 1px #002774;
 	font-family: 'Cabin', sans-serif;
@@ -141,11 +141,11 @@ ul.pricing-list li.price-text-blue {
 	line-height: 28px!important;
 	font-weight: 600!important;
 	margin-bottom: 5px!important;
-} 
+}  */
 
 /* END BLUE top PRICE CARD */
 
-
+/* this works ok */
 /* BEGIN Green top PRICE CARD */
 
 .price-box-green {
@@ -167,7 +167,7 @@ ul.pricing-list li.price-text-blue {
 	-moz-osx-font-smoothing: grayscale;
 }
 
-
+/* this works ok */
 .price-box-green .price-subtitle {
 	color: #002774 !important;
 	font-family: 'Cabin', sans-serif;
@@ -177,7 +177,7 @@ ul.pricing-list li.price-text-blue {
 	margin: -2%;
 }
 
-.pricing-list-green .price-tag-green a {
+/* .pricing-list-green .price-tag-green a {
     color: #cfe6fc;
     background: linear-gradient(to bottom right, #1e92f6, #020723);
     border-radius: 30px 8px;
@@ -188,19 +188,19 @@ ul.pricing-list li.price-text-blue {
     line-height: 24px;
     font-weight: 600;
     margin: 40px 0 30px 0;
-}
+} */
 
 
-ul.pricing-list-green li.price-tag-green a:hover {
+/* ul.pricing-list-green li.price-tag-green a:hover {
 	background: #ee3e0e;
 	background: linear-gradient(135deg,  #ee3e0e 0%, #020723 100%);
-}
+} */
 
 
-ul.pricing-list-blue li.price-tag-blue a:hover {
+/* ul.pricing-list-blue li.price-tag-blue a:hover {
 	background: #ee3e0e;
     background: linear-gradient(135deg,  #ee3e0e 0%, #020723 100%);
-}
+} */
 
 /* END Green top PRICE CARD */
 
@@ -224,6 +224,7 @@ ul.pricing-list-blue li.price-tag-blue a:hover {
 	}	
 }
 
+/* this works ok */
 .price-box-yellow {
 	text-align: center;
     color:#002774;
@@ -241,15 +242,16 @@ ul.pricing-list-blue li.price-tag-blue a:hover {
 	-moz-osx-font-smoothing: grayscale;
 }
 
-.price-box-yellow .price-subtitle .price-box-blue .price-text{
+/* .price-box-yellow .price-subtitle .price-box-blue .price-text{
 	color: #002774 !important;
 	font-family: 'Cabin', sans-serif;
 	font-size: 14px;
 	line-height: 18px;
 	font-weight: 400;
 	margin-top: -3%;
-}
+} */
 
+/* this works ok */
 .price-box-yellow .price-subtitle {
 	color: #002774 !important;
 	font-family: 'Cabin', sans-serif;
@@ -259,7 +261,7 @@ ul.pricing-list-blue li.price-tag-blue a:hover {
 	margin: -3%;
 }
 
-.pricing-list-yellow .price-tag-green a {
+/* .pricing-list-yellow .price-tag-green a {
     color: #cfe6fc;
     background: #008aff;
     background: linear-gradient(to bottom right, #1e92f6, #020723);
@@ -271,14 +273,15 @@ ul.pricing-list-blue li.price-tag-blue a:hover {
     line-height: 24px;
     font-weight: 600;
     margin: 40px 0 30px 0;
-}
+} */
 
 
-ul.pricing-list-green li.price-tag-green a:hover {
+/* ul.pricing-list-green li.price-tag-green a:hover {
 	background: #ee3e0e;
 	background: linear-gradient(135deg,  #ee3e0e 0%, #020723 100%);
-}
+} */
 
+/* this works ok */
 ul.pricing-list li.price-text-yellow {
 	color: #002774 !important;
 	font-family: 'Cabin', sans-serif;
@@ -288,7 +291,7 @@ ul.pricing-list li.price-text-yellow {
 	margin-bottom: 5px!important;
 } 
 
-
+/* this works ok */
 .price-box-green-bottom {
 	text-align: center;
 	background: #7fbd3e;
@@ -311,6 +314,7 @@ ul.pricing-list li.price-text-yellow {
 
 /* PRICE BOX RED */
 
+/* this works ok */
 .price-box-red {
 	text-align: center;
     color:#002774;
