--- a/style/Index/style.css
+++ b/style/Index/style.css
@@ -1472,6 +1472,7 @@ background: linear-gradient(to bottom right, #1e92f6, #020723);
 	-moz-osx-font-smoothing: grayscale;
 }
 
+/* this works ok */
 .price-box-blue{
 	text-align: center;
 	background: #1e92f6;
@@ -1489,6 +1490,7 @@ background: linear-gradient(to bottom right, #1e92f6, #020723);
 	-moz-osx-font-smoothing: grayscale;
 }
 
+/* this goes to the white box */
 .price-box-blue:hover, .price-box-grey:hover, .price-box-white:hover, .price-box-green:hover, .price-box-yellow:hover, .price-box-green-bottom:hover,.price-box-red:hover {
 	transform: scale(1.03,1.03);
 	-ms-transform: scale(1.03,1.03); /* IE 9 */
@@ -1497,6 +1499,7 @@ background: linear-gradient(to bottom right, #1e92f6, #020723);
     -moz-backface-visibility: hidden;
 }
 
+/* this goes to the white box */
 .price-box-white .price-title, .price-box-white ul.pricing-list li.price-value,
 .price-box-grey .price-title, .price-box-grey ul.pricing-list li.price-value {
 	color: #293e84;
@@ -1507,9 +1510,12 @@ background: linear-gradient(to bottom right, #1e92f6, #020723);
 	color: #293e84;
 }
 
+/* this goes to the white box */
 .price-box-white .price-subtitle-1,.price-box-white .price-text {
 	color: #293e84;
 }
+
+/* this goes to the white box */
 ul.pricing-list li.price-title{
 	font-family: 'Cabin', sans-serif;
 	font-size: 28px;
@@ -1519,6 +1525,7 @@ ul.pricing-list li.price-title{
 	margin-bottom: 5%;
 }
 
+/* this works ok */
 ul.pricing-list li.price-value{
 	font-family: 'Cabin', sans-serif;
 	font-size: 70px;
@@ -1536,14 +1543,16 @@ ul.pricing-list li.price-value{
 	margin: -3%;
 } */
 
+/* goes with white box */
 ul.pricing-list li.price-text{
 	font-family: 'Cabin', sans-serif;
 	font-size: 16px;
 	line-height: 28px;
-	font-weight: 400;
+	font-weight: 600;
 	margin-bottom: 5px;
 }
 
+/* works for everything except the blue box */
 ul.pricing-list li.price-tag a {
 	color: #cfe6fc;
 	background: #008aff;
@@ -1560,32 +1569,18 @@ ul.pricing-list li.price-tag a {
 	-webkit-transition: all 0.3s ease-in-out;
 }
 
+/* works for everything except the blue box */
 ul.pricing-list li.price-tag a:hover{
 	background: #ee3e0e;
     background: linear-gradient(135deg,  #ee3e0e 0%, #020723 100%);
 }
 
-.price-box-blue ul.pricing-list li.price-tag a{
-	color: #cfe6fc;
-	/* background: #008aff; */
-    background: linear-gradient(to bottom right, #1e92f6, #020723);
-	border: 2px solid #002774;
-	border-radius: 30px 8px;
-	padding: 15px 30px;
-	display: inline-block;
-	font-size: 14px;
-	line-height: 24px;
-	font-weight: 600;
-	margin: 40px 0 30px 0;
-	transition: all 0.3s ease-in-out;
-	-webkit-transition: all 0.3s ease-in-out;
-}
 
-.price-box-blue ul.pricing-list li.price-tag a:hover {
-	color: #4285f4;
-	border: 2px solid #002774;
-	/* background: #cfe6fc; */
-}
+
+/* .price-box-blue ul.pricing-list li.price-tag a:hover{
+	background: #ee3e0e;
+    background: linear-gradient(135deg,  #ee3e0e 0%, #020723 100%);
+} */
 
 /* ========================================================== */
 /* 			                   09. BLOG                       */
